# unity-bridge

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.claude/skills/: unity-bridge-cli
.codex/: pr16-playmode-reload-trace-brief.md
.codex/agents/: unity-bridge-explorer.toml  unity-bridge-reviewer.toml
ClaudeCodeBridge/: ACTIVATION_INSTRUCTIONS.md  AGENTS.md  AdaptivePerformanceCommandHandler.cs  AddComponentCommandHandler.cs  AddressablesAdvancedHelpers.cs  AddressablesCommandHandler.cs  AnimationClipCommandHandler.cs  AnimatorLayerOperations.cs  AnimatorOperationCommandHandler.cs  AnimatorOperationCommandHandler_ACTIVATION.md  AnimatorParameterOperations.cs  AnimatorStateOperations.cs  AnimatorTransitionOperations.cs  AssemblyReloadLockCommandHandler.cs  AssetExtendedCommandHandler.cs  AssetExtendedHelpers.cs  AssetExtendedModels.cs  AssetFileMutationScope.cs  AssetOperationCommandHandler.cs  AudioSettingsCommandHandler.cs  BridgeCommandRegistry.cs  BridgeEditorSceneCleanup.cs  BridgeLogger.cs  BridgeMenuItems.cs  BridgeModels.cs  BridgeModelsPhase2.cs  BridgeModelsPhase3.cs  BridgeOperationLedger.cs  BridgeSceneModalRecovery.cs  BridgeStatusCommandHandler.cs  BridgeStatusCommandHandler_ACTIVATION.md  BridgeTestRunReporter.cs  BuildOperationCommandHandler.cs  BuildOperationHelpers.cs  BuildPlatformOperations.cs  BuildProfileBuildHelpers.cs  BuildProfileCommandHandler.cs  BuildProfileCreateCallback.cs  BuildProfileCreateOperation.cs  BuildProfileModels.cs  (+140 more)
docs/: AGENTS.md  bridge-bom-json-rca.html  bridge-compile-wait-research.html  gap-analysis-report.md  index.md  package-manager-automation-research.html  phase4-adversarial-gap-report.md  phase7-new-gaps-report.md  profiler-frame-drilldown-design.md  reload-domain-resilience-research.html  tech-spec-adversarial-review.md  tech-spec-cli-refactor-review.md  tech-spec-cli-refactor.md  tech-spec-phase1-core-apis.md  tech-spec-phase2-workflow-apis.md  tech-spec-phase3-specialized-apis.md  tech-spec-phase4-critical-gaps.md  unity-6-4-bridge-implementation.md  unity-6.4-capability-delta-analysis.md  unity-6.5-capability-gap-audit.md  unity-6.5-full-editor-coverage-audit.html  unity-bridge-audit-and-gap-analysis.md
docs/research/: FeatureSpec_CodeCoverageBridgeUtility_2026-06-26.md
src/unity_bridge/: __init__.py  __main__.py  app.py
tests/: AGENTS.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  requirements.txt  test_bridge_utils.py  test_health_monitor.py  test_integration.py  test_response_cache.py  test_retry_handler.py  test_wsl_compatibility.py
tests/fixtures/: heartbeat.json  sample_hierarchy.json  sample_snapshot.json  sample_test_results.json  unity65_fixture_matrix.json
tests/integration/: conftest.py  live_unity.py  test_cli_smoke.py  test_mcp_compat.py  test_unity65_live_contracts.py  test_unity65_live_matrix.py
tests/unit/: test_addressables.py  test_animation.py  test_assembly_lock.py  test_asset_extended.py  (+113 more)
tools/: command_surface_parity.py
(+218 files in other folders)
